Fundamentos de ecuaciones

--- a/latex/[Ecuaciones-Diferenciales].tex
+++ b/latex/[Ecuaciones-Diferenciales].tex
@@ -3,23 +3,20 @@
 \input{_paquetes}
 \input{_tufte}
 \input{_comandos}
-\input{_entornos}
 \input{_comandos_md}
-\input{_entornos_md}
 \input{_comandos_trig}
 \input{_comandos_pe}
-\input{_color-listings}
 
 
-\title{Cálculo}
+\title{Ecuaciones Diferenciales y Álgebra Lineal}
 \author{github.com/julihocc}
-\publisher{maththehardway.com}
+\publisher{Juliho Castillo Colmenares Ph.D.}
 
 \begin{document}
 	\maketitle
 \begin{tabular}{|p{.9\textwidth}|}
 	\hline
-Cálculo © 2020 by Juliho David Castillo Colmenares is licensed under Attribution 4.0 International 
+Ecuaciones diferenciales © 2021 by Juliho David Castillo Colmenares is licensed under Attribution 4.0 International
 	\begin{center}
 		\includegraphics[scale=1]{./licencia/by.png}
 	\end{center}\\
@@ -27,34 +24,12 @@ Cálculo © 2020 by Juliho David Castillo Colmenares is licensed under Attributi
 \end{tabular}
 \tableofcontents
 
-\chapter{Cálculo Diferencial}
-\input{limites_continuidad}
-\input{derivadas}
-\input{derivacion_implicita}
-\input{derivacion_logaritmica}
-\input{linealizacion}
-\input{optimizacion_univariada}
-\input{analisis_graficas}
-
-\chapter{Cálculo Integral}
-\input{antiderivadas}	
-\input{integral_definida}
-\input{teorema_fundamental_calculo}
-\input{integracion_por_partes}
-\input{fracciones_parciales}
-\input{integracion_trigonometrica}
-\input{area_longitud_arco}
-\input{volumen}
-
-\chapter{Cálculo en varias variables}
-\input{curvas_parametrizadas}
-\input{derivadas_parciales}
-
 \chapter{Ecuaciones de primer orden}
 
 \input{fundamentos_ecuaciones_diferenciales}
 \input{edos_primer_orden}
 \input{aplicaciones_edos}
+\input{problemas-primer-orden}
 
 \chapter{Espacios Vectoriales}
 \input{espacios_vectoriales}
