Problemas de la sección 1

--- a/latex/edos_primer_orden.tex
+++ b/latex/edos_primer_orden.tex
@@ -1,23 +1,24 @@
 \section{Ecuaciones Especiales de Primer Orden}
 
-{}
-  Cualquier ecuación diferencial de primer orden de la \emph{forma normal}
+
+  Cualquier ecuación diferencial de primer orden en la \emph{forma normal}
      \begin{align*}
    \dfrac{dy}{dx} = f(x,y)
    \end{align*}
    puede ser reescrita en la \emph{forma diferencial}
        \begin{align*}
     M(x,y)dx+N(x,y)dy =0
-    \end{align*} 
-    y  viceversa. 
+    \end{align*}
+    y  viceversa.
 
 %%%%%%%%%%%%%%%%%%%%%
-{Separación de variables}
-Una ecuación es \emph{separable} si se puede escribir en la forma. 
+\subsection{Separación de variables}
+
+Una ecuación es \emph{separable} si se puede escribir en la forma.
  \begin{align*}
  f_{1}(x)g_{1}(y)dx+f_{2}(x)g_{2}(y)dy = 0
  \end{align*}
- 
+
 %%%%%%%%%%%%%%%%%%%%%
 {}
 En ese caso, su solución  está dada por
@@ -29,72 +30,74 @@ En ese caso, su solución  está dada por
 
 %%%%%%%%%%%%%%%%%%%%%
 
-	\begin{problema}
+	\begin{resuelto}
 		Resuelve la ecuación diferencial
 		\begin{align*}
 		xdy-ydx=0
 		\end{align*}
-	\end{problema}
+	\end{resuelto}
 
-{Ecuaciones exactas}
+\subsection{Ecuaciones exactas}
+
   Una ecuación
      \begin{align*}
    M(x,y)dx + N(x,y)dy = 0
    \end{align*}
-   es \emph{exacta} si 
+   es \emph{exacta} si
    existe una función diferenciable $U:\R^{2}\to \R$ tal que
        \begin{align*}
-       M(x,y)dx + N(x,y)dy = dU(x,y) = 0 
+       M(x,y)dx + N(x,y)dy = dU(x,y) = 0
     \end{align*}
- 
 
-En ese caso, la solución está dada por                                         \begin{align*}
+
+En ese caso, la solución está dada por
+\begin{align*}
 U(x,y) = c
 \end{align*}
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-Un criterio para determinar si una ecuación es exacta es verificar que 
+Un criterio para determinar si una ecuación es exacta es verificar que
 \begin{align*}
     \dfrac{\partial M}{\partial y}= \dfrac{\partial N}{\partial x}
     \end{align*}
 
 %%%%%%%%%%%%%%%%%%%%%
 
-	\begin{problema}
+	\begin{resuelto}
 		Determina si la ecuación
 		\begin{align*}
 			xdy-ydx=0
 		\end{align*}
 		es exacta.
-	\end{problema}
+	\end{resuelto}
 
 {}
-  De manera equivalente, podemos encontrar la solución de la siguiente manera 
+  De manera equivalente, podemos encontrar la solución de la siguiente manera
   \begin{align*}
    \displaystyle \int M\partial x+ \int \left( N - \dfrac{\partial }{\partial y}\int M\partial x \right)dy = c
    \end{align*}
-   
-   donde \emph{$\partial x$} indica que la integración es realizada únicamente respecto a $x$, manteniendo $y$ constante. 
+
+   donde \emph{$\partial x$} indica que la integración es realizada únicamente respecto a $x$, manteniendo $y$ constante.
 
 %%%%%%%%%%%%%%%%%%%%%
 
-	\begin{problema}
+	\begin{resuelto}
 		Demuestra que la ecuación
 		\begin{align*}
 		\dfrac{xdy-ydx}{x^2}=0
 		\end{align*}
-		es exacta y resuélvela. 
-	\end{problema}
+		es exacta y resuelvela.
+	\end{resuelto}
 
-{Factor Integrante}
-  Cuando una ecuación no es exacta, en ocasiones se puede encontrar de manera explícita una función $\mu:\R^{2}\to \R$ llamada \emph{factor integrante} tal que 
+\subsection{Factor Integrante}
+  Cuando una ecuación no es exacta, en ocasiones se puede encontrar de manera explícita una función $\mu:\R^{2}\to \R$ llamada \emph{factor integrante} tal que
 \begin{align*}
- \dfrac{\partial }{\partial y}\left( \mu M \right) = 
+ \dfrac{\partial }{\partial y}\left( \mu M \right) =
  \dfrac{\partial }{\partial x}\left( \mu N \right)
  \end{align*}
- 
- y por tanto 
+
+ y por tanto
  \begin{align*}
   \mu M dx + \mu N dy = 0
   \end{align*}
@@ -121,9 +124,9 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  En este caso, un factor integrantes está dado por 
-  \begin{align*}\displaystyle 
-   \mu = e^{\int p(x)dx} 
+  En este caso, un factor integrantes está dado por
+  \begin{align*}\displaystyle
+   \mu = e^{\int p(x)dx}
    \end{align*}
    y la ecuación se puede reescribir como
    \begin{align*}
@@ -132,25 +135,25 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  Entonces, 
-  \begin{align*}\displaystyle 
+  Entonces,
+  \begin{align*}\displaystyle
    \mu y = \int \mu q(x) dx +c
    \end{align*}
-   y la solución está dada por 
-   \begin{align*}\displaystyle 
+   y la solución está dada por
+   \begin{align*}\displaystyle
     y & = e^{-\int pdx}\left( \int e^{\int p dx} q(x) dx +c \right)\\
     &= e^{-\int pdx}\int e^{\int p dx}  q(x) dx +c e^{-\int pdx}
     \end{align*}
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
-   Reescribe la ecuación 
+  \begin{resuelto}
+   Reescribe la ecuación
    \begin{align*}
     xdy-ydx=0
     \end{align*} en forma lineal;
-    calcula el factor integrante y resuelve. 
-  \end{problema}
+    calcula el factor integrante y resuelve.
+  \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%
@@ -178,21 +181,21 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  Entonces tiene su solución está dada por 
+  Entonces tiene su solución está dada por
   \begin{align*}
-   \displaystyle 
+   \displaystyle
    \ln |x| = \int \dfrac{d\nu}{F(\nu)-\nu}+c
    \end{align*}
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
-   Reescriba la ecuación 
+  \begin{resuelto}
+   Reescriba la ecuación
    \begin{align*}
     xdy-ydx=0
     \end{align*}
-    como una ecuación homogénea de orden cero y resuelva. 
-  \end{problema}
+    como una ecuación homogénea de orden cero y resuelva.
+  \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%
@@ -206,10 +209,10 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  En ese caso, hacemos la sustitución $\nu = y^{1-n}$ y la ecuación se reduce a una ecuación lineal, cuya solución está dada por 
+  En ese caso, hacemos la sustitución $\nu = y^{1-n}$ y la ecuación se reduce a una ecuación lineal, cuya solución está dada por
   \begin{align*}
-  \displaystyle 
-   \nu e^{(1-n)\int pdx} = 
+  \displaystyle
+   \nu e^{(1-n)\int pdx} =
    \left( 1-n \right) \int q e^{(1-n)\int pdx}+c
    \end{align*}
 
@@ -218,27 +221,27 @@ Un criterio para determinar si una ecuación es exacta es verificar que
   \begin{observacion}
    \begin{enumerate}[(i)]
      %NUEVO ITEM
-     \item Si $n=0$, la ecuación ya es lineal sin necesidad de hacer sustitución alguna. 
-     
-     \item Si $n=1$, la ecuación se puede reescribir como separable. 
+     \item Si $n=0$, la ecuación ya es lineal sin necesidad de hacer sustitución alguna.
+
+     \item Si $n=1$, la ecuación se puede reescribir como separable.
 \end{enumerate}
   \end{observacion}
 
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
-   Resuelve la ecuación 
+  \begin{resuelto}
+   Resuelve la ecuación
    \begin{align*}
     x\dfrac{dy}{dx}+y=xy^{3}
     \end{align*}
-  \end{problema}
+  \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%
 \subsection{Ecuaciones solubles}
 {}
-  Diremos que una ecuación diferencial es soluble para $y$ si 
+  Diremos que una ecuación diferencial es soluble para $y$ si
   \begin{align*}
    y = g\left( x,p \right)
    \end{align*}
@@ -246,12 +249,12 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  En ese caso, 
+  En ese caso,
   \begin{align*}
    \dfrac{dy}{dx} = \dfrac{dg}{dx}
    = \dfrac{\partial g}{\partial x}+\dfrac{\partial g}{\partial p}\dfrac{\partial p}{\partial x}
    \end{align*}
-   
+
    o de manera equivalente
    \begin{align*}
     p = \dfrac{\partial g}{\partial x}+\dfrac{\partial g}{\partial p}\dfrac{\partial p}{\partial x}
@@ -267,19 +270,19 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
-   Resuelve la ecuación 
+  \begin{resuelto}
+   Resuelve la ecuación
    \begin{align*}
     xp^{2}+2px-y =0
     \end{align*}
     donde $p=y'$.
-  \end{problema}
+  \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%
 \subsection{Ecuación de Clairaut}
 {}
-  Diremos que una ecuación es de Clairaut si se puede reescribir como 
+  Diremos que una ecuación es de Clairaut si se puede reescribir como
   \begin{align*}
    y = px+F(p)
    \end{align*}
@@ -287,123 +290,87 @@ Un criterio para determinar si una ecuación es exacta es verificar que
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  Este es un caso especial del tipo anterior con solución 
+  Este es un caso especial del tipo anterior con solución
   \begin{align*}
    y = cx + F(c)
    \end{align*}
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
+  \begin{resuelto}
    Resuelve la ecuación
    \begin{align*}
     y = px\pm \sqrt{p^{2}+1}
     \end{align*}
     donde $p=y'$.
-  \end{problema}
+  \end{resuelto}
 
 
-%%%%%%%%%%%%%%%%%%%%%
-% \subsection{Miscelanea}
-% {}
-%   Si la ecuación se puede reescribir como
-%   \begin{align*}
-%    \dfrac{dy}{dx}=F\left( \alpha x +\beta y \right) ,
-%    \end{align*} entonces la podemos reducir a una separable con la sustitución 
-%    \begin{align*}
-%     \nu = \alpha + \beta y
-%     \end{align*}
-% 
-% %%%%%%%%%%%%%%%%%%%%%
-% {}
-%   Si la ecuación se puede reescribir como 
-%   \begin{align*}
-%    \dfrac{dy}{dx} = F\left( \dfrac{
-%    \alpha_{1}x + \beta_{1} y + \gamma_{1}
-%    }{
-%    \alpha_{2}x + \beta_{2} y + \gamma_{2}
-%    } \right)
-%    \end{align*}
-% 
-% %%%%%%%%%%%%%%%%%%%%%
-% {}
-%   Si $
-%    \dfrac{\alpha_{1}}{\alpha_{2}}\neq \dfrac{\beta_{1}}{\beta_{2}}
-%    $, entonces podemos elegir constantes $h,k$ tales que la ecuación se reduce a una homogénea con el cambio de variables
-%    \begin{align*}
-%     x = X+h, y=Y+k
-%     \end{align*}
-% 
-% %%%%%%%%%%%%%%%%%%%%%
-% {}
-%   Si $
-%    \dfrac{\alpha_{1}}{\alpha_{2}}= \dfrac{\beta_{1}}{\beta_{2}}
-%    $,la ecuación se reduce al tipo anterior. 
-%   
-% 
-% %%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%
+ \subsection{Miscelanea}
+ {}
+   Si la ecuación se puede reescribir como
+   \begin{align*}
+    \dfrac{dy}{dx}=F\left( \alpha x +\beta y \right) ,
+    \end{align*} entonces la podemos reducir a una separable con la sustitución
+    \begin{align*}
+     \nu = \alpha + \beta y
+     \end{align*}
+
+ %%%%%%%%%%%%%%%%%%%%%
+ {}
+   Si la ecuación se puede reescribir como
+   \begin{align*}
+    \dfrac{dy}{dx} = F\left( \dfrac{
+    \alpha_{1}x + \beta_{1} y + \gamma_{1}
+    }{
+    \alpha_{2}x + \beta_{2} y + \gamma_{2}
+    } \right)
+    \end{align*}
+
+ %%%%%%%%%%%%%%%%%%%%%
+ {}
+   Si $
+    \dfrac{\alpha_{1}}{\alpha_{2}}\neq \dfrac{\beta_{1}}{\beta_{2}}
+    $, entonces podemos elegir constantes $h,k$ tales que la ecuación se reduce a una homogénea con el cambio de variables
+    \begin{align*}
+     x = X+h, y=Y+k
+     \end{align*}
+
+ %%%%%%%%%%%%%%%%%%%%%
+ {}
+   Si $
+    \dfrac{\alpha_{1}}{\alpha_{2}}= \dfrac{\beta_{1}}{\beta_{2}}
+    $,la ecuación se reduce al tipo anterior.
+
+
+ %%%%%%%%%%%%%%%%%%%%%
 \subsection{Reducción de orden}
 {}
-  Si una ecuación diferencial es de orden $m>1$, pero hace falta de forma explícita la variable dependiente $y$, entonces se puede reducir de orden con la sustitución 
+  Si una ecuación diferencial es de orden $m>1$, pero hace falta de forma explícita la variable dependiente $y$, entonces se puede reducir de orden con la sustitución
   $y'=p$.
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
+  \begin{resuelto}
    Resuelve la ecuación
    \begin{align*}
     y''+2y'=4x
     \end{align*}
-  \end{problema}
+  \end{resuelto}
 
 
 %%%%%%%%%%%%%%%%%%%%%
 {}
-  \begin{problema}
-   Resuelve la ecuación 
+  \begin{resuelto}
+   Resuelve la ecuación
    \begin{align*}
     1+yy''+y'^{2} = 0
     \end{align*}
-  \end{problema}
+  \end{resuelto}
 con la reducción de orden $y'=p$.
 
 %%%%%%%%%%%%%%%%%%%%%
 % ejemplos de ecuaciones de primer orden...
 % ecuaciones separables
-\subsection{Ejemplos}
-{}
-  \begin{problema}
-   \begin{enumerate}[(i)]
-     %NUEVO ITEM
-     \item Encuentra la solución general de 
-     \begin{align*}
-      \left( 4x+xy^{2} \right)dx+\left( y+x^{2}y \right)dy = 0
-      \end{align*}
-     
-     \item Encuentra la solución particular para $y(1)=2$.
-\end{enumerate}
-  \end{problema}
 
-
-%%%%%%%%%%%%%%%%%%%%%
-{}
-  Resuelve el problema de valor inicial
-  \begin{align*}
-   \begin{cases}
-\dfrac{dy}{dx}+3y=8 \\
-y(0)=2
-\end{cases}
-   \end{align*}
-
-%%%%%%%%%%%%%%%%%%%%%
-{}
-  \begin{problema}
-   Resuelve la ecuación
-   \begin{align*}
-    \dfrac{dy}{dx} = \sec(y)\tan(x)
-    \end{align*}
-  \end{problema}
-
-
-%%%%%%%%%%%%%%%%%%%%%
-% ecuaciones exactas
